Tue Jul 21 11:44:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted the change below, it was triggered by template problems in TAO_IDL
        generated code

        Sat Jul 18 00:52:14 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
        * ace/config-macosx-leopard.h:
          Intel on OS X requires explicit template visibility.

Tue Jul 21 10:57:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Updated link to bugzilla

Mon Jul 20 07:34:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Bool_Array.h:
        * apps/gperf/src/Key_List.h:
          Added workaround for BCB linker which needs these classes exported

Sun Jul 19 08:18:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS/server/HTTP_Response.cpp:
        * apps/JAWS/server/JAWS_IO.cpp:
          Unicode fixes

Sat Jul 18 04:14:31 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/POSIX_Proactor.cpp:

          Attempt to fix a compile warning that appears to be the result
          of a bug in the optimizer in GCC 4.1.2.

Sat Jul 18 00:52:14 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-leopard.h:

          Intel on OS X requires explicit template visibility.

Fri Jul 17 18:32:45 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_time.cpp (mktime): Set t_sys.wMilliseconds to 0 so
          it's initialized properly.  Thanks to Ryan Carmichael
          <RCarmichael at drs-tem dot com> for this fix.

Fri Jul 17 14:36:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * apps/JAWS/server/HTTP_Response.cpp:
        * apps/JAWS/server/JAWS_IO.cpp:
          Resolved UNICODE compiler errors.

Wed Jul 15 14:43:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/gperf.mpc:
          Made the library name different to resolve problems with vxtest
